# chatts-data-quality

./: .env.example  .gitignore  README.md  environment.yml  environment_chronos.yml  pyproject.toml  requirements.txt
configs/: prescreener.yaml  segmentation.yaml  signals.yaml  vsc.yaml
data/: README.md
models/: README.md  segmentation_mlp_final.pt
notebooks/ablation/: ab1_window_size_sensitivity.ipynb  ab2_prescreener_thresholds.ipynb  ab3_chatts_8b_vs_14b.ipynb  ab4_mcq_template_comparison.ipynb  ab5_segmentation_query_sensitivity.ipynb
notebooks/exploration/: README.md
notebooks/extensions/: ext1_vision_gpt4o.ipynb  ext2_tool_calling.ipynb  ext3_feedback_loop.ipynb
notebooks/final_experiments/: 01_approach1_statistical_only.ipynb  02_approach2_stats_embedded.ipynb  03_approach3_hybrid.ipynb  04_gpt4o_comparison.ipynb  05_segmentation_pipeline.ipynb
scripts/: evaluate_all.py  generate_industrial_training_data.py  generate_synthetic_training_data.py  run_approach3.py  run_segmentation.py  train_mlp.py
src/: __init__.py
src/data/: __init__.py  csv_loader.py  ground_truth.py  timeseer_client.py
src/evaluation/: __init__.py  metrics.py  report.py
src/inference/: __init__.py  chatts_infer.py  chronos_server.py  embeddings.py  openai_infer.py  tool_calling.py  vision_infer.py
src/models/: __init__.py  chatts_loader.py  mlp.py
src/parsing/: __init__.py  extract.py
src/preprocessing/: __init__.py  chunking.py  windows.py
src/prescreener/: __init__.py  analyze.py
src/prompts/: builder.py  (+2 more)
vsc/: setup_env.sh  slurm_chatts14b.sh  slurm_train_mlp.sh
(+8 files in other folders)
